<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MVVMModeActivity">

    <Button
        android:id="@+id/simple_mode_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simple_mode_tip" />

    <Button
        android:id="@+id/with_base_mode_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/base_mode_tip" />

    <Button
        android:id="@+id/list_for_mvvm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_for_mvvm_tip" />
</LinearLayout>