<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    tools:context=".LogAddActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/log_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btns_layout"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/btns_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/placeholder_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_increase_first_btn_tip" />

        <Button
            android:id="@+id/clear_log_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_layout_history_clear" />

        <Button
            android:id="@+id/change_visible_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_increase_second_btn_tip" />
    </LinearLayout>
</RelativeLayout>