<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.temporary.demoproject.qmuidemo.QMUIDialogActivity">

    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/message_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textColor="@drawable/qmui_button_border_color"
            app:qmui_isRadiusAdjustBounds="true"
            app:qmui_borderColor="@drawable/qmui_button_border_color"
            android:layout_gravity="center_horizontal"
            android:text="@string/message_dialog_button"/>

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/checkbox_message_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textColor="@drawable/qmui_button_border_color"
            app:qmui_isRadiusAdjustBounds="true"
            app:qmui_borderColor="@drawable/qmui_button_border_color"
            android:layout_gravity="center_horizontal"
            android:text="@string/checkbox_message_dialog_button"/>

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/edittext_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textColor="@drawable/qmui_button_border_color"
            app:qmui_isRadiusAdjustBounds="true"
            app:qmui_borderColor="@drawable/qmui_button_border_color"
            android:layout_gravity="center_horizontal"
            android:text="@string/edittext_message_dialog_button"/>

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/menu_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textColor="@drawable/qmui_button_border_color"
            app:qmui_isRadiusAdjustBounds="true"
            app:qmui_borderColor="@drawable/qmui_button_border_color"
            android:layout_gravity="center_horizontal"
            android:text="@string/menu_dialog_button"/>

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/checkable_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textColor="@drawable/qmui_button_border_color"
            app:qmui_isRadiusAdjustBounds="true"
            app:qmui_borderColor="@drawable/qmui_button_border_color"
            android:layout_gravity="center_horizontal"
            android:text="@string/checkable_dialog_button"/>

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/multi_checkable_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textColor="@drawable/qmui_button_border_color"
            app:qmui_isRadiusAdjustBounds="true"
            app:qmui_borderColor="@drawable/qmui_button_border_color"
            android:layout_gravity="center_horizontal"
            android:text="@string/multi_checkable_dialog_button"/>
    </LinearLayout>
</LinearLayout>
