<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.temporary.demoproject.EventBusMainActivity">

    <data>

        <variable
            name="activity"
            type="com.temporary.demoproject.EventBusMainActivity" />

        <variable
            name="eventBusDao"
            type="com.temporary.bean.EventBusDao" />

        <import type="com.temporary.util.DataBindingUtil" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.qmuiteam.qmui.widget.QMUITopBar
            android:id="@+id/mQmuiTopbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:qmui_topbar_bg_color="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/white">

            <Button
                android:id="@+id/mPostEventBusBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{activity::onViewClicked}"
                android:text="@string/post_eventbus_test" />

            <Button
                android:id="@+id/mStickyEventBusBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{activity::onViewClicked}"
                android:text="@string/sticky_eventbus_test" />

            <Button
                android:id="@+id/mRemoveEventBusBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{activity::onViewClicked}"
                android:text="@string/remove_eventbus_test" />

            <Button
                android:id="@+id/mEventBusSub1Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{activity::onViewClicked}"
                android:text="@string/intent_eventbus_sub1_test" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@{DataBindingUtil.getEventBusDaoInfo(eventBusDao.name)}" />
        </LinearLayout>
    </LinearLayout>
</layout>
