<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/cancel_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/popupwindow_cancel_text"
                android:textColor="@drawable/popup_text_selector"
                android:textSize="20dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/popup_window_city_button"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/ok_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/popupwindow_ok_text"
                android:textColor="@drawable/popup_text_selector"
                android:textSize="20dp" />
        </LinearLayout>

        <com.itheima.wheelpicker.WheelPicker
            android:id="@+id/wheel_city_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:wheel_atmospheric="true"
            app:wheel_cyclic="false"
            app:wheel_selected_item_text_color="@android:color/black" />
    </LinearLayout>

</LinearLayout>